Test/Files/Parser/FullParserTestCases/FullTests/Out/testcase00_12.out
<Type> ::= ID
<Expr> ::= new ID ( )
<Expr> ::= ! <Expr>
<Expr> ::= null
<Expr> ::= - <Expr>
<Expr> ::= <Expr> * <Expr>
<Stmt> ::= <Type> ID = <Expr> ;


Parse error on line 5:
...             while()                i
----------------------^
Expecting '!', '-', 'new', 'ID', 'this', 'Integer', 'null', 'true', 'false', '('